--- a/CSS/estilo.css
+++ b/CSS/estilo.css
@@ -29,6 +29,14 @@ body{
     text-shadow: 3px 3px 2px #333  
 }
 
+.hero-content p{
+
+    background-color: rgba(0,0,0,  0.8);
+    display: inline-block;
+    padding: 10px;
+    border-bottom: 2px solid white;
+}
+
 .hero nav ul{
 
     text-align: right;
@@ -72,15 +80,44 @@ letter-spacing: 2px;
 main{
 
 width: 80%;
-margin:auto
+margin:auto;
 
 
 }
 
 .content-section{
     background-color: white;
-    padding: 15px;
-    margin-top:15px
+    padding: 10px;
+    margin-top:15px;
+    overflow: auto;
+
+}
+
+.card {
+    width: 32%;
+    float: left;
+    box-sizing: border-box;
+}
+
+.card-1, .card-2{
+
+    margin-right:2%;
+
+}
+
+.card img{
+
+    width: 100%;
+    display:block
+}
+
+.card p{
+
+    background-color:rgb(73, 73, 73);
+    color:white;
+    margin: 0;
+    padding:15px;
+    
 
 }
 
